fix dark mode & add transition

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 html { 
   height: 100%;
   background-color: white;
+  transition: background-color 1s ease, color 1s ease;
 }
 html.dark-mode {
   background-color: #0c0b0b;
